--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,6 @@
 
 body {
   margin: 0;
-  padding: 10px;
   box-sizing: border-box;
   font-family: 'Ubuntu', sans-serif;
   width: 100vw;
@@ -35,10 +34,11 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90vw;
+  width: 95vw;
   border: 1px solid rgb(226, 220, 220);
   padding: 20px;
   background-color: white;
+  margin-top: -62px;
 }
 
 .category-index-container {
@@ -50,16 +50,26 @@ html {
   background-color: rgb(255, 255, 255);
 }
 
+.categories-index {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 95vw;
+  gap: 20px;
+  margin-top: 20px;
+}
+
 .category-index {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90vw;
+  width: 85vw;
   padding: 10px;
   border: 1px solid rgb(226, 220, 220);
   background-color: white;
   margin: 0;
-  margin-top: 10px;
+  gap: 40px;
 }
 
 .category-icon {
@@ -104,6 +114,8 @@ html {
   justify-content: center;
   align-items: center;
   width: 90vw;
+  margin: 0;
+  margin-top: -62px;
 }
 
 .add-category {
@@ -128,4 +140,13 @@ html {
   width: 90vw;
   margin-left: 10vw;
   padding: 10px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  margin: 0;
 }
