--- a/app/assets/stylesheets/logins.css
+++ b/app/assets/stylesheets/logins.css
@@ -96,3 +96,59 @@ label {
 .form-control select option {
   font-size: 2rem;
 }
+
+
+@media only screen and (max-width: 768px) {
+  .form {
+    border: solid 1px rgb(206, 201, 201);
+    height: 80vh;
+    padding: 10px;
+    border-radius: 10px;
+    width: 90vw;
+    margin-top: -50px;
+  }
+
+  .input-field {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+    outline: 0;
+    margin-top: 10px;
+  }
+  
+  .field {
+    display: flex;
+    align-items: center;
+    border-bottom: solid 1px rgb(206, 201, 201);
+    gap: 10px;
+    margin-top: 10px;
+    width: 90vw;
+    color: rgb(206, 201, 201);
+  }
+
+  .field label {
+    width: 75px;
+  }
+
+
+  .action-next input {
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #5fb523;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+  }
+
+  .action-next input:hover {
+    font-size: 22px;
+    cursor: pointer;
+  }
+
+  .action-next input:hover {
+    color: red;
+    cursor: pointer;
+  }
+
+}
