--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,7 +38,7 @@ html {
   border: 1px solid rgb(226, 220, 220);
   padding: 20px;
   background-color: white;
-  margin-top: -62px;
+  margin-top: -20px;
 }
 
 .category-index-container {
@@ -115,7 +115,7 @@ html {
   align-items: center;
   width: 90vw;
   margin: 0;
-  margin-top: -62px;
+  // margin-top: -62px;
 }
 
 .add-category {
