--- a/app/assets/stylesheets/logins.css
+++ b/app/assets/stylesheets/logins.css
@@ -104,7 +104,8 @@ label {
     padding: 10px;
     border-radius: 10px;
     width: 90vw;
-    margin-top: -50px;
+
+    /* margin-top: -50px; */
   }
 
   .input-field {
@@ -114,6 +115,15 @@ label {
     border-bottom: none;
     outline: 0;
     margin-top: 10px;
+  }
+
+  .form-logged-in {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90vw;
+    margin-top: 100px;
   }
 
   .field {
